# mlflow_autogluon

./: .gitignore  README.md  pyproject.toml
.claude/: ralph-loop.local.md
.github/workflows/: ci.yml  deploy.yml
mlflow_autogluon/: __init__.py  _load.py  _log.py  _mlflow_utils.py  _requirements.py  _save.py  autogluon_impl.py  constants.py  load.py  log.py  mlflow_utils.py  predict_methods.py  pyfunc.py  requirements.py  save.py  types.py
mlflow_autogluon/autogluon/: __init__.py  autogluon_impl.py
mlflow_autogluon/autogluon/pyfunc/: __init__.py  autogluon_pyfunc.py
mlflow_autogluon/domain/: __init__.py  model_type.py  predict_method.py  predictor_loader.py  save_config.py
mlflow_autogluon/pyfunc/: __init__.py  input_parser.py  output_formatter.py  pyfunc.py
mlflow_autogluon/utils/: helpers.py
tests/: conftest.py  test_autogluon_flavor.py  test_autogluon_pyfunc.py  test_integration.py  test_integration_slow.py  utils.py
