[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlflow-autogluon"
version = "0.1.0"
description = "MLflow plugin for AutoGluon models"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["machine-learning", "ai", "mlflow", "autogluon", "automl"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mlflow>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "mlflow-autogluon[test,lint]",
]
lint = [
    "ruff>=0.1.0",
    "flake8>=7.0",
    "flake8-pyproject>=1.0",
    "wemake-python-styleguide>=0.19.0",
]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "autogluon.tabular>=1.0.0",
    "scikit-learn>=1.0.0",
]
tabular = [
    "autogluon.tabular>=1.0.0",
]
timeseries = [
    "autogluon.timeseries>=1.0.0",
]
multimodal = [
    "autogluon.multimodal>=1.0.0",
]
vision = [
    "autogluon.vision>=1.0.0",
]
all = [
    "mlflow-autogluon[tabular,timeseries,multimodal,vision]",
]

[project.entry-points."mlflow.plugin"]
autogluon = "mlflow_autogluon"


[tool.setuptools.packages.find]
exclude = ["tests*", "examples*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
source = ["mlflow_autogluon"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.ruff]
target-version = "py39"
line-length = 90
exclude = ["tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.flake8]
max-line-length = 90
max-local-variables = 9
max-arguments = 7
extend-ignore = [
    "E203",   # whitespace before ':' - conflicts with ruff formatter
    "W503",   # line break before binary operator - conflicts with PEP 8
    "WPS110", # wrong variable name - standard mlflow names
    "WPS111", # short variable - standard convention
    "WPS226", # string literal over-use - model type strings used throughout
    "WPS305", # f-strings - modern Python standard
    "WPS326", # implicit string concatenation - readable pattern
    # TODO: Make all constants immutable and delete ignore rule
    "WPS407", # mutable module constants - acceptable pattern
    "WPS410", # wrong metadata variable: __all__ - standard Python practice
    "WPS412", # __init__.py module with logic - only imports here
    "WPS421", # wrong function call: hasattr - standard Python function
    "WPS433", # nested imports - necessary for lazy loading
    "WPS450", # protected object import - necessary for internal imports
    "WPS529", # implicit .get() dict usage - concise pattern
]
exclude = ["tests"]
