[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlflow-autogluon"
version = "0.1.0"
description = "MLflow plugin for AutoGluon models"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["machine-learning", "ai", "mlflow", "autogluon", "automl"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mlflow>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "mlflow-autogluon[test,lint]",
]
lint = [
    "ruff>=0.1.0",
    "flake8>=7.0",
    "flake8-pyproject>=1.0",
    "wemake-python-styleguide>=0.19.0",
]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "autogluon.tabular>=1.0.0",
    "scikit-learn>=1.0.0",
]
tabular = [
    "autogluon.tabular>=1.0.0",
]
timeseries = [
    "autogluon.timeseries>=1.0.0",
]
multimodal = [
    "autogluon.multimodal>=1.0.0",
]
vision = [
    "autogluon.vision>=1.0.0",
]
all = [
    "mlflow-autogluon[tabular,timeseries,multimodal,vision]",
]

[project.entry-points."mlflow.plugin"]
autogluon = "mlflow_autogluon"


[tool.setuptools.packages.find]
exclude = ["tests*", "examples*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
source = ["mlflow_autogluon"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.ruff]
target-version = "py39"
line-length = 90
exclude = ["tests"]

[tool.ruff.lint]
select = [
  "A",    # flake8-builtins
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "C90",  # maccabe
  "COM",  # flake8-commas
  "D",    # pydocstyle
  "DTZ",  # flake8-datetimez
  "E",    # pycodestyle
  "ERA",  # flake8-eradicate
  "EXE",  # flake8-executable
  "F",    # pyflakes
  "FA",   # flake8-future-annotations
  "FBT",  # flake8-boolean-trap
  "FLY",  # pyflint
  "FURB", # refurb
  "G",    # flake8-logging-format
  "I",    # isort
  "ICN",  # flake8-import-conventions
  "ISC",  # flake8-implicit-str-concat
  "LOG",  # flake8-logging
  "N",    # pep8-naming
  "PERF", # perflint
  "PIE",  # flake8-pie
  "PL",   # pylint
  "PT",   # flake8-pytest-style
  "PTH",  # flake8-use-pathlib
  "Q",    # flake8-quotes
  "RET",  # flake8-return
  "RSE",  # flake8-raise
  "RUF",  # ruff
  "S",    # flake8-bandit
  "SIM",  # flake8-simpify
  "SLF",  # flake8-self
  "SLOT", # flake8-slots
  "T100", # flake8-debugger
  "TRY",  # tryceratops
  "UP",   # pyupgrade
  "W",    # pycodestyle
  "YTT",  # flake8-2020
]
ignore = [
  "A005",   # allow to shadow stdlib and builtin module names
  "COM812", # trailing comma, conflicts with `ruff format`
  # Different doc rules that we don't really care about:
  "D100",
  "D104",
  "D106",
  "D203",
  "D212",
  "D401",
  "D404",
  "D405",
  "D418",  # We should be able to add docstrings to `@overload` decorators
  "ISC001",  # implicit string concat conflicts with `ruff format`
  "ISC003",  # prefer explicit string concat over implicit concat
  "PLR09",   # we have our own complexity rules
  "PLR2004", # do not report magic numbers
  "PLR6301", # do not require classmethod / staticmethod when self not used
  "TRY003",  # long exception messages from `tryceratops`
  "FBT001",  # allow boolean-typed positional arguments
]
external = [ "WPS" ]

flake8-import-conventions.banned-from = [ "ast", "datetime" ]
flake8-import-conventions.aliases = { datetime = "dt" }
flake8-quotes.inline-quotes = "single"
mccabe.max-complexity = 6
pydocstyle.convention = "google"

[tool.ruff.lint.per-file-ignores]
"mlflow_autogluon/load.py" = ["PLC0415"]
"mlflow_autogluon/pyfunc/pyfunc.py" = ["PLC0415"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true

[tool.flake8]
format = "wemake"
show-source = true
statistics = false
doctests = true
max-line-length = 90
exclude = ["tests"]
select = ["WPS", "E999"]
extend-ignore = [
    "E203",   # whitespace before ':' - conflicts with ruff formatter
    "W503",   # line break before binary operator - conflicts with PEP 8
    "WPS110", # wrong variable name - standard mlflow names
    "WPS111", # short variable - standard convention
    "WPS226", # string literal over-use - model type strings used throughout
    "WPS305", # f-strings - modern Python standard
    "WPS326", # implicit string concatenation - readable pattern
    # TODO: Make all constants immutable and delete ignore rule
    "WPS407", # mutable module constants - acceptable pattern
    "WPS410", # wrong metadata variable: __all__ - standard Python practice
    "WPS412", # __init__.py module with logic - only imports here
    "WPS421", # wrong function call: hasattr - standard Python function
    "WPS450", # protected object import - necessary for internal imports
    "WPS529", # implicit .get() dict usage - concise pattern
]

per-file-ignores = [
    "mlflow_autogluon/load.py: WPS210, WPS211",  # load_model: necessary for MLflow loading
    "mlflow_autogluon/save.py: WPS201, WPS202, WPS213",  # save_model: complex but organized helper flow, 8 module members
    "mlflow_autogluon/log.py: WPS211, WPS213, WPS237",  # log_model: necessary for MLflow logging
    "mlflow_autogluon/pyfunc/pyfunc.py: WPS237",  # complex f-strings for error messages
]
